commit new pages

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
       <div id="nav">
          <a href="index.html">
             <img src="image\logo.png" alt="Página home">
-         </a>
+         </a>|
+         <a href="spaceships.html">The Spaceships</a> |
+         <a href="hireus.html">Hire Us</a>
       </div>
       <hr>
       <div id="section">
@@ -28,7 +30,7 @@
       </div>
       <div class="section">
          <h3>Prices</h3>
-         <table>
+         <table border="1">
             <thead>
                <tr>
                   <th>Service</th>
