--- a/hireus.html
+++ b/hireus.html
@@ -13,5 +13,30 @@
          <a href="hireus.html">Hire Us</a>
       </div>
       <hr>
+      <h3>Hire Us Now</h3>
+      <p>Leave a message to request one of our services and we will get back to you as soon as possible.</p>
+
+      
+      <form action="/action_page.php" autocomplete="on">
+         <div>
+            <label for="name">Name:</label>
+         <input type="text" id="name" name="name"> - 
+         <label for="email">Email:</label>
+         <input type="email" id="email" name="email">
+         </div>
+         <br>
+         <div>
+            <label for="ships">Spaceship:</label>
+         <select id="ships" name="ships">
+            <option value="falcon9">Falcon 9</option>
+            <option value="falconheavy">Falcon Heavy</option>
+         </select> | 
+         <label for="typesearch">Type of Service:</label>
+         <input type="search" id="typesearch" name="typesearch">
+         </div>
+         <br>
+         <input type="submit" value="Send Message">
+      </form>
+      
    </body>
 </html>
