--- a/hireus.html
+++ b/hireus.html
@@ -5,38 +5,50 @@
       <title>SpaceX</title>
    </head>
    <body>
-      <div id="nav">
-         <a href="index.html">
-            <img src="image\logo.png" alt="Página home">
-         </a>|
-         <a href="spaceships.html">The Spaceships</a> |
-         <a href="hireus.html">Hire Us</a>
-      </div>
-      <hr>
-      <h3>Hire Us Now</h3>
+      <header>
+         <nav>
+            <a href="index.html">
+               <img src="image\logo.png" alt="Página home">
+            </a>|
+            <a href="spaceships.html">The Spaceships</a> |
+            <a href="hireus.html">Hire Us</a>
+         </nav>
+         <hr>
+      </header>
+      <section>
+         <h1>Hire Us Now</h1>
       <p>Leave a message to request one of our services and we will get back to you as soon as possible.</p>
-
-      
-      <form action="/action_page.php" autocomplete="on">
-         <div>
-            <label for="name">Name:</label>
-         <input type="text" id="name" name="name"> - 
-         <label for="email">Email:</label>
-         <input type="email" id="email" name="email">
-         </div>
-         <br>
-         <div>
-            <label for="ships">Spaceship:</label>
-         <select id="ships" name="ships">
-            <option value="falcon9">Falcon 9</option>
-            <option value="falconheavy">Falcon Heavy</option>
-         </select> | 
-         <label for="typesearch">Type of Service:</label>
-         <input type="search" id="typesearch" name="typesearch">
-         </div>
-         <br>
-         <input type="submit" value="Send Message">
-      </form>
-      
+      </section>
+      <br></br>
+      <section>
+         <form action="/action_page.php" autocomplete="on">
+            <div>
+               <label for="name">Name:</label>
+               <input type="text" id="name" name="name"> - 
+               <label for="email">Email:</label>
+               <input type="email" id="email" name="email">
+            </div>
+            <br><br>
+            <div>
+               <label for="ships">Spaceship:</label>
+               <select id="ships" name="ships">
+                  <option value="falcon9">Falcon 9</option>
+                  <option value="falconheavy">Falcon Heavy</option>
+               </select> | 
+               <label for="service">Type of Service:</label>
+               <input type="search" id="service" name="service" list="services">
+               <datalist id="services">
+                  <option value="1 Leave a message to"></option>
+                  <option value="2 Leave a message to"></option>
+                  <option value="3 Leave a message to"></option>
+                  <option value="4 Leave a message to"></option>
+               </datalist>
+            </div>
+            <br><br>
+            <div>
+               <input type="submit" value="Send Message">
+            </div>
+         </form>
+      </section>    
    </body>
 </html>
