--- a/spaceships.html
+++ b/spaceships.html
@@ -5,27 +5,32 @@
       <title>SpaceX</title>
    </head>
    <body>
-      <div id="nav">
-         <a href="index.html">
-            <img src="image\logo.png" alt="Página home">
-         </a>|
-         <a href="spaceships.html">The Spaceships</a> |
-         <a href="hireus.html">Hire Us</a>
-      </div>
-      <hr>
-      <div class="header">
-         <h3>Available Spaceships</h3>
-      </div>
-      <div class="section">
-         <h4>Falcon 9</h4>
-         <img src="image\falcon_9.jpg">
-         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum, quia quis? Culpa sunt recusandae velit quibusdam quae asperiores vero dolorem ipsa, harum accusamus facere vel libero alias. Nulla, beatae sed?</p>
-      </div>
-      <hr>
-      <div class="section">
-         <h3>FALCON HEAVY</h3>
-         <img src="image\falcon_heavy.jpg">
-         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio non quasi alias possimus. Natus, error repellendus, labore obcaecati architecto, molestias maiores porro incidunt eum debitis ipsa. Soluta deleniti eligendi debitis?</p>
-      </div>
+      <header>
+         <nav>
+            <a href="index.html">
+               <img src="image\logo.png" alt="Página home">
+            </a>|
+            <a href="spaceships.html">The Spaceships</a> |
+            <a href="hireus.html">Hire Us</a>
+         </nav>
+         <hr>
+      </header>
+      <section>
+         <h1>Available Spaceships</h1>
+      </section>
+      <br>
+      <section>
+         <section>
+            <h4>Falcon 9</h4>
+            <img src="image\falcon_9.jpg">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum, quia quis? Culpa sunt recusandae velit quibusdam quae asperiores vero dolorem ipsa, harum accusamus facere vel libero alias. Nulla, beatae sed?</p>
+         </section>
+         <hr>
+         <section>
+            <h3>FALCON HEAVY</h3>
+            <img src="image\falcon_heavy.jpg">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio non quasi alias possimus. Natus, error repellendus, labore obcaecati architecto, molestias maiores porro incidunt eum debitis ipsa. Soluta deleniti eligendi debitis?</p>
+         </section>            
+      </section> 
    </body>
 </html>
